# cli

./: .gitignore  README.md  pyproject.toml  ynh
.github/workflows/: format.yml  lint.yml
src/yunohost_cli/: __init__.py  actionsmap.py  actionsmap.yml  cli.py  config.py  interactive.py  prints.py  server.py  utils.py
