[project]
name = "yunohost-cli"
version = "0.1.0"
description = "A CLI for YunoHost!"
readme = "README.md"
authors = [
    { name = "YunoHost", email = "yunohost@yunohost.org" }
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "platformdirs>=4.0",
    "pyyaml>=6.0",
    "ryaml>=0.4.0",
    "toml>=0.10",
]

[project.scripts]
yunohost-cli = "yunohost_cli:main"
ynh = "yunohost_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy",
    "types-toml>=0.10",
    "types-pyyaml>=6.0",
]

[tool.mypy]
follow_imports = "normal"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = false
strict = true
