[project]
name = "yunohost-cli"
version = "0.1.0"
description = "A CLI for YunoHost!"
readme = "README.md"
authors = [
    { name = "YunoHost", email = "yunohost@yunohost.org" }
]
requires-python = ">=3.10"
dependencies = [
    "asyncio>=3.4.3",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.0",
    "packaging>=25.0",
    "platformdirs>=4.0",
    "prompt-toolkit>=3.0.51",
    "pytz>=2025.2",
    "pyyaml>=6.0",
    "rich>=13.9.0",
    "toml>=0.10",
]

[project.scripts]
yunohost-cli = "yunohost_cli:main"
ynh = "yunohost_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy",
    "types-toml>=0.10",
    "types-pyyaml>=6.0",
    "ruff>=0.11.9",
]

[tool.mypy]
follow_imports = "normal"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = false
strict = true

[tool.ruff]
line-length = 120

[tool.pyright]
reportArgumentType = false
