[project]
name = "yunohost-cli"
version = "0.1.0"
description = "A CLI for YunoHost!"
readme = "README.md"
authors = [
    { name = "YunoHost", email = "yunohost@yunohost.org" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "httpx-sse>=0.4.0",
    "packaging>=25.0",
    "platformdirs>=4.0",
    "prompt-toolkit>=3.0.51",
    "pyyaml>=6.0",
    "rich>=13.9.0",
    "toml>=0.10",
]

[dependency-groups]
dev = [
    "mypy",
    "types-toml>=0.10",
    "types-pyyaml>=6.0",
    "ruff>=0.11.9",
]

[project.scripts]
yunohost-cli = "yunohost_cli:main"
ynh = "yunohost_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.mypy]
follow_imports = "normal"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = false
strict = true

[tool.ruff]
line-length = 120

lint.select = [
    "YTT",      # flake8-2020
    "ANN",      # flake8-annotations
    "BLE",      # flake8-blind-except
    "B",        # flake8-bugbear
    "A",        # flake8-builtins
    "C4",       # flake8-comprehensions
    "DTZ",      # flake8-datetimez
    "ISC",      # flake8-implicit-str-concat
    "ICN",      # flake8-import-conventions
    "LOG",      # flake8-logging
    "G",        # flake8-logging-format
    "PIE",      # flake8-pie
    "Q",        # flake8-quotes
    "RET",      # flake8-return
    "SIM",      # flake8-simplify
    "SLOT",     # flake8-slots
    "PTH",      # flake8-use-pathlib
    "FLY",      # flynt
    "I",        # isort
    "N",        # pep8-naming
    "PERF",     # Perflint
    "E",        # pycodestyle
    "W",        # pycodestyle
    "F",        # Pyflakes
    "PL",       # Pylint
    "UP",       # pyupgrade
    "FURB",     # refurb
    "RUF",      # Ruff-specific rules
    "TRY",      # tryceratops
    # "D",
]
lint.ignore = [
    "ANN401",   # any-type
    "COM812",   # missing-trailing-comma
    "D203",     # incorrect-blank-line-before-class
    "PLR0911",  # too-many-return-statements
    "PLR0912",  # too-many-branches
    "PLR0913",  # too-many-arguments
    "PLR0915",  # too-many-statements
    "PLR2004",  # magic-value-comparison
    "UP009",    # utf8-encoding-declaration
    "TRY003",   # raise-vanilla-args
    "D100",     # undocumented-public-module
    "D104",     # undocumented-public-package
    "D105",     # undocumented-magic-method
    "D200",     # unnecessary-multiline-docstring
    "D212",     # multi-line-summary-first-line
    "D401",     # non-imperative-mood
]
